ci(appcenter): change organization and codepush deployment key

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "parrot": "parrot",
     "ios": "react-native run-ios",
     "ios-run-release": "react-native run-ios --configuration Release",
-    "ios-codepush": "react-native run-ios --configuration Release && appcenter codepush release-react -a lomocoin/Lomo-RN-Boilerplate-iOS -d Staging",
+    "ios-codepush": "react-native run-ios --configuration Release && appcenter codepush release-react -a LoMoCoinTeam/Lomo-RN-Boilerplate-iOS -d Staging --plist-file ios/LomoRN/Info.plist",
     "android": "react-native run-android",
     "android-run-release": "react-native run-android --variant=release",
-    "android-codepush": "react-native run-android --variant=release && appcenter codepush release-react -a lomocoin/Lomo-RN-Boilerplate-Android -d Staging",
+    "android-codepush": "react-native run-android --variant=release && appcenter codepush release-react -a LoMoCoinTeam/Lomo-RN-Boilerplate-Android -d Staging",
     "android-log": "react-native log-android",
     "reset": "watchman watch-del-all && react-native start --reset-cache",
     "translations": "node ./scripts/make-translations.js",
