--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,6 +101,7 @@ android {
     defaultConfig {
         applicationId "com.lomorn"
         minSdkVersion rootProject.ext.minSdkVersion
+        missingDimensionStrategy "RNN.reactNativeVersion", "reactNative56"
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -108,6 +109,12 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     splits {
         abi {
             reset()
@@ -137,19 +144,31 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support' && requested.name != 'multidex') {
+            details.useVersion "${rootProject.ext.supportLibVersion}"
+        }
+    }
+}
+
+
 dependencies {
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-toast-native')
-    compile project(':react-native-splash-screen')
-    compile project(':react-native-i18n')
-    compile project(':react-native-device-info')
-    compile project(':react-native-code-push')
-    compile project(':appcenter-crashes')
-    compile project(':appcenter-analytics')
-    compile project(':appcenter')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-toast-native')
+    implementation project(':react-native-splash-screen')
+    implementation project(':react-native-i18n')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-code-push')
+    implementation project(':appcenter-crashes')
+    implementation project(':appcenter-analytics')
+    implementation project(':appcenter')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-navigation')
+
 }
 
 // Run this once to be able to run the application with BUCK
