--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,8 @@ subprojects { subproject ->
                         setIgnore(true)
                     }
                 }
+                compileSdkVersion 26
+                buildToolsVersion '27.0.3'
             }
         }
     }
@@ -45,7 +47,7 @@ allprojects {
 
 ext {
     buildToolsVersion = "27.0.3"
-    minSdkVersion = 19
+    minSdkVersion = 21
     compileSdkVersion = 26
     targetSdkVersion = 26
     supportLibVersion = "27.0.0"
