--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@babel/core": "7.1.6",
     "@babel/plugin-proposal-decorators": "7.1.6",
     "@commitlint/cli": "7.2.1",
+    "@commitlint/config-conventional": "7.1.2",
     "@commitlint/prompt-cli": "7.2.1",
     "@types/i18next": "11.9.3",
     "@types/jest": "23.3.9",
